# PipeX

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPORT_FIXES_SUMMARY.md  MANIFEST.in  NEW_FEATURES.md  READY_FOR_RELEASE.md  RELEASE_GUIDE.md  Readme.md  USAGE_EXAMPLES.md  config.yaml  config_file_example.yaml  filestructure.txt  main.py  pipelinex.bat  pipelinex.py  pipex.bat  pipex.py  pyproject.toml  requirements.txt  setup.py  test_access.py  test_error_handling.yaml  test_missing_env.yaml  test_new_features.yaml  transformed_data.csv  transformed_output.csv
.github/: dependabot.yml  mlc_config.json
.github/workflows/: auto-release.yml  ci.yml  continuous-deploy.yml  format.yml  python-publish.yml  release.yml  smart-release.yml  test-basic.yml
app/: __init__.py  api.py  cli.py  cloud_storage.py  config.yaml  default_transforms.py  error_handler.py  extract.py  load.py  mock_api.py  mockapi.py  storage.py  transform.py  utils.py
config/: __init__.py  logging_config.py  settings.py
examples/: multi_cloud_config.yaml
examples/transforms/: industry_specific.py
output/: final_processed_data.csv  processed_articles.json
output/enhanced/: processed_data_20260106_172616.json
tests/: __init__.py  test_basic.py  test_cli.py  test_extract.py  test_load.py  test_performance.py  test_transform.py  transform_script.py
